# langchain-tutorial

./: README.md
1.0-Introduction/: main.py  pyproject.toml
2.0-search-agent/: main.py  pyproject.toml
3.0-agent-under-the-hood/: main.py  pyproject.toml
4.0-rag/: ingest.py  main.py  mediumblog1.txt  pyproject.toml
5.0-rag-documentation-helper/: main.py  pyproject.toml  test.py
5.0-rag-documentation-helper/backend/: core.py
5.0-rag-documentation-helper/ingestion/: delete.py  ingestion.py
6.0-langgraph-react/: main.py  pyproject.toml
7.0-reflection-agent/: generation_prompt.txt  main.py  pyproject.toml  reflection_prompt.txt
8.0-reflextion-agent/: main.py  pyproject.toml
9.0-agentic-rag/: ingestion.py  main.py  pyproject.toml
9.0-agentic-rag/chains/: generator.py  hallucination_grader.py  retrieval_grader.py  router.py  usefulness_grader.py
9.0-agentic-rag/chains/test/: test.py
9.0-agentic-rag/nodes/: generator.py  hallucination_grader.py  retrieval_grader.py  retriever.py  router.py  usefulness_grader.py  web_search.py
9.0-agentic-rag/state/: state.py
9.0-agentic-rag/vector_db/: delete.py  vector_db.py
